fix breadcrumb alignment (#159)
* fix breadcrumb alignment

* fix linting issue

---------

--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -95,7 +95,7 @@
     position: relative;
     width: 100vw;
     max-width: 100vw;
-    padding: 47px 65px 0 67px;
+    padding: 47px 35px 0;
   }
 
   .hero.block h1 {
@@ -109,6 +109,12 @@
 
   .hero.block .hero-link-container {
     gap: 6em;
+  }
+}
+
+@media (min-width: 900px) {
+  body.article main .section.hero-container {
+    padding: 47px 15px 0;
   }
 }
 
