--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,7 @@
  * governing permissions and limitations under the License.
  */
 
- :root {
+:root {
   /* colors */
   --link-color: #004dff;
   --secondary-link-color: #004dff;
@@ -89,8 +89,12 @@ header {
   height: var(--nav-height);
 }
 
-h1, h2, h3,
-h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: var(--heading-font-family);
   font-weight: 600;
   line-height: 1.25;
@@ -99,22 +103,38 @@ h4, h5, h6 {
   scroll-margin: calc(var(--nav-height) + 1em);
 }
 
-h1 { 
+h1 {
   font-size: var(--heading-font-size-xxl);
   font-weight: 900;
 }
 
-h2 { 
-  font-size: var(--heading-font-size-l); 
+h2 {
+  font-size: var(--heading-font-size-l);
   font-family: var(--subheading-font-family);
 }
 
-h3 { font-size: var(--heading-font-size-l) }
-h4 { font-size: var(--heading-font-size-m) }
-h5 { font-size: var(--heading-font-size-s) }
-h6 { font-size: var(--heading-font-size-xs) }
+h3 {
+  font-size: var(--heading-font-size-l)
+}
 
-p, dl, ol, ul, pre, blockquote {
+h4 {
+  font-size: var(--heading-font-size-m)
+}
+
+h5 {
+  font-size: var(--heading-font-size-s)
+}
+
+h6 {
+  font-size: var(--heading-font-size-xs)
+}
+
+p,
+dl,
+ol,
+ul,
+pre,
+blockquote {
   margin-top: 1em;
   margin-bottom: 1em;
 }
@@ -126,12 +146,15 @@ hr {
   border-bottom: 1px solid var(--overlay-background-color);
 }
 
-code, pre, samp {
+code,
+pre,
+samp {
   font-family: var(--fixed-font-family);
   font-size: var(--body-font-size-s);
 }
 
-code, samp {
+code,
+samp {
   padding: .125em;
 }
 
@@ -158,7 +181,8 @@ a:hover {
 }
 
 /* buttons */
-a.button:any-link, button {
+a.button:any-link,
+button {
   font-family: var(--subheading-font-family);
   text-transform: uppercase;
   font-size: var(--body-font-size-xs);
@@ -185,7 +209,10 @@ a.button:any-link, button {
   border-radius: 30px; */
 }
 
-a.button:hover, a.button:focus, button:hover, button:focus  {
+a.button:hover,
+a.button:focus,
+button:hover,
+button:focus {
   color: var(--link-hover-color);
 
   /* background-color: var(--link-hover-color); */
@@ -197,9 +224,10 @@ a.button:hover, a.button:focus, button:hover, button:focus  {
   cursor: unset;
 } */
 
-a.button.secondary, button.secondary {
+a.button.secondary,
+button.secondary {
   /* background-color: unset; */
-  
+
   /* border: 2px solid currentcolor; */
   color: var(--secondary-link-color);
 }
@@ -261,12 +289,15 @@ main .section {
 }
 
 body.article main .section.abstract {
-  padding-bottom: 0;
-  padding-top: 0;
+  padding: 0 25px;
+  margin-left: 10px;
 }
 
-body.article main .section.abstract + .section {
+body.article main .section.abstract+.section {
   padding-top: 0;
+  padding-left: 25px;
+  padding-right: 25px;
+  margin-left: 10px;
 }
 
 body.article main .section.abstract p.date {
@@ -291,12 +322,12 @@ body.article main .section.abstract h1 {
 
 @media (min-width: 600px) {
   main .section {
-    padding: 64px 32px;
+    padding: 64px 35px;
   }
 }
 
 @media (min-width: 900px) {
-  .section > div {
+  .section>div {
     max-width: 1200px;
     margin: auto;
   }
@@ -308,7 +339,7 @@ body.article main .section.abstract h1 {
   }
 
   body.article main .section:not(.aside-container) {
-    max-width: 60%;    
+    max-width: 60%;
   }
 
   body.article main .section.aside-container {
@@ -318,12 +349,18 @@ body.article main .section.abstract h1 {
     padding-top: 0;
     max-width: 25%;
   }
+
+  body.article main .section.abstract,
+  body.article main .section.abstract+.section {
+    padding-left: 15px;
+    margin-left: 0;
+  }
 }
 
 
 @media (min-width: 1200px) {
   body.article main .section:not(.aside-container) {
-    max-width: 800px;    
+    max-width: 800px;
   }
 
   body.article main .section.aside-container {
@@ -333,6 +370,13 @@ body.article main .section.abstract h1 {
     padding-top: 0;
     max-width: 350px;
   }
+
+  body.article main .section.abstract,
+  body.article main .section.abstract+.section {
+    padding-left: 0;
+    margin-left: 0;
+  }
+
 }
 
 /* section metadata */
